# nyc-snap-eval

./: .env.example  .gitignore  CITATION.cff  CLAUDE.md  LICENSE  README.md  pyproject.toml
data/policy_corpus/: README.md
data/policy_corpus/federal/7-cfr-273/: full.json  full.xml  meta.yaml  versions.json
data/policy_corpus/nyc/benefits-screening-api/: meta.yaml
data/policy_corpus/nyc/hra-public-pages/: meta.yaml
data/policy_corpus/state/otda-snap-source-book/: meta.yaml
demo/: README.md
docs/: conventions.md  project-plan.md  status.md
docs/decisions/: ADR-001-eval-harness-promptfoo.md  ADR-002-eligibility-math-deterministic.md  ADR-003-deployment-surface-caseworker.md  ADR-004-simulated-baseline-framing.md  ADR-005-policy-corpus-sources.md  ADR-006-eval-categories.md  ADR-007-judge-model-and-meta-prompt.md  ADR-008-post-obbba-post-mycity-amendments.md  README.md
docs/handoffs/: day-2-category-a-authoring-notes.md  day-2-category-a-paste-ready.tsv  day-2-kickoff.md  day-3-kickoff.md
docs/outreach/: README.md  screening-api-account-request.md  sme-outreach.md
docs/research/: README.md  r1-nyc-poverty-and-benefits-infrastructure.md  r2-eval-methodology-and-mycity-postmortem.md  r3-propel-positioning-synthetic-data-voice.md  r4-corpus-access-verification.md  r5-freshness-audit-2026-05-11.md
eval/: promptfooconfig.yaml
eval/cases/: A_mycity_replay.csv  README.md
eval/graders/: llm_judge_meta_prompt.md
eval/validation/: README.md
scripts/: README.md  export_sheet_to_csv.py  pull_ecfr.py  pull_otda_sourcebook.py  scrape_hra_pages.py
(+40 files in other folders)
