[project]
name = "nyc-snap-eval"
version = "0.1.0"
description = "Statute-grounded evaluation suite for caseworker-facing SNAP benefits-navigation AI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "pypdf>=4.3",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
